--- a/stories/components/dataDisplay/EmptyBox.stories.mdx
+++ b/stories/components/dataDisplay/EmptyBox.stories.mdx
@@ -3,7 +3,7 @@ import NewGrid from '@/components/grid/NewGrid.vue';
 import NewRow from '@/components/grid/NewRow.vue';
 import NewCol from '@/components/grid/NewCol.vue';
 import EmptyBox, { Types } from '@/components/emptyBox/EmptyBox.vue';
-import EmptyIllust from '@/components/emptyBox/EmptyIllust.vue';
+import EmptyIllust, { ILLUST_SOURCES } from '@/components/emptyBox/EmptyIllust.vue';
 import Typography from '@/components/typography/Typography';
 
 <Meta
@@ -127,22 +127,27 @@ export const Default = (args, { argTypes }) => ({
 <Canvas>
 	<Story name="Emphasized With Graphic" height="120px">
 		{{
+			data() {
+				return {
+					ILLUST_SOURCES
+				};
+			},
 			components: { EmptyBox, EmptyIllust, Typography, NewGrid, NewRow, NewCol },
 			template: `<NewGrid>
                     <NewRow>
-                        <NewCol :col-lg="12" :col-sm="4" class="flex justify-around align-center">
-                            <EmptyBox type="emphasized">
+                        <NewCol :col-lg="4" :col-sm="4" class="flex justify-around align-center" v-for="item in ILLUST_SOURCES" :key="item">
+                            <EmptyBox type="emphasized" >
 								<template v-slot:illust>
-									<EmptyIllust type="other" />
+									<EmptyIllust :type="item" />
 								</template>
                                 <template v-slot:title>
-                                    제출한 과제가 없습니다.
+                                    {{ item }}에 대한 Empty입니다.
                                 </template>
                                 <template v-slot:contents>
-                                    아래를 눌러 과제를 제출하세요.
+									{{ item }}에 대한 Empty입니다.
                                 </template>
                                 <template v-slot:link>
-                                    과제 제출하기
+                                    재시도
                                 </template>
                             </EmptyBox>
                         </NewCol>
